--- a/views/Admin/edit-product.hbs
+++ b/views/Admin/edit-product.hbs
@@ -24,7 +24,7 @@
             </div>
             <div class="row tm-edit-product-row">
               <div class="col-xl-6 col-lg-6 col-md-12">
-                <form action="" method="post" class="tm-edit-product-form">
+                <form action="/admin/products/edit/" method="get" class="tm-edit-product-form">
                   {{#product}}
                   <div class="form-group mb-3">
                     <label
@@ -50,6 +50,7 @@
                       required
                     >{{describe}}</textarea>
                   </div>
+                   
                   <div class="form-group mb-3">
                     <label
                       for="category"
@@ -58,13 +59,15 @@
                     <select
                       class="custom-select tm-select-accounts"
                       id="category"
+                      name = 'category'
                     >
-                      <option>Select category</option>
-                      {{#types}}
-                      <option value={{type_name}}>{{type_name}}</option>
-                      {{/types}}
+                      <option selected>Select category</option>
+                      {{#each types as |type|}}
+                      <option value={{type.type_name}}>{{type.type_name}}</option>
+                      {{/each}}
                     </select>
                   </div>
+                  
                   <div class="row">
                       <div class="form-group mb-3 col-xs-12 col-sm-12">
                           <label
