updated edit product

--- a/views/Admin/add-product.hbs
+++ b/views/Admin/add-product.hbs
@@ -22,7 +22,7 @@
             </div>
             <div class="row tm-edit-product-row">
               <div class="col-xl-6 col-lg-6 col-md-12">
-                <form action="/admin/products/add/" class="tm-edit-product-form" method="get">
+                <form action="/admin/products/add/new-product" class="tm-edit-product-form" method="get">
                   <div class="form-group mb-3">
                     <label
                       for="name"
