--- a/views/User/product.hbs
+++ b/views/User/product.hbs
@@ -31,6 +31,7 @@
         </h2>
       </div>
       <div class="row">
+        {{#prods}}
         <div class="col-sm-6 col-lg-4">
           <div class="box">
             <div class="img-box">
@@ -48,11 +49,11 @@
             </div>
             <div class="detail-box">
               <h5 name={{prod_name}}>
-                {{prod_name}}
+                {{product_name}}
               </h5>
               <div class="product_info">
                 <h5 name={{prod_price}}>
-                  <span>$</span> {{prod_price}}
+                  <span>$</span> {{price}}
                 </h5>
                 <div class="star_container">
 
@@ -61,17 +62,26 @@
             </div>
           </div>
         </div>
+        {{/prods}}
       </div>
-      <div class="btn_box">
-        <a href="/detail" class="view_more-link">
-          View More
-        </a>
-      </div>
+      <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+          <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1">Previous</a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item">
+            <a class="page-link" href="?page=1">Next</a>
+          </li>
+        </ul>
+      </nav>
     </div>
   </section>
 
   <!-- end product section -->
-  
+
   {{> footer}}
   {{> script}}
   <script>
