Commit product detail

--- a/views/User/product.hbs
+++ b/views/User/product.hbs
@@ -41,7 +41,7 @@
                   Add To Cart
                 </span>
               </a>
-              <a href="/detail" class="detail_btn">
+              <a href="product/detail/{{id}}" class="detail_btn">
                 <span>
                   Detail
                 </span>
