--- a/views/User/productDetail.hbs
+++ b/views/User/productDetail.hbs
@@ -25,6 +25,7 @@
     <section class="bg-light">
         <div class="container pb-5">
             <div class="row">
+                {{#prods}}
                 <div class="col-lg-5 mt-5">
                     <div class="card mb-3">
                         <img class="card-img img-fluid" src="/img/p1.png" alt="Card image cap" id="product-detail">
@@ -127,8 +128,8 @@
                 <div class="col-lg-7 mt-5">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="h2">Camera</h1>
-                            <p class="h3 py-2">$25.00</p>
+                            <h1 class="h2">{{product_name}}</h1>
+                            <p class="h3 py-2">{{price}}$</p>
                             <p class="py-2">
                                 <i class="fa fa-star text-warning"></i>
                                 <i class="fa fa-star text-warning"></i>
@@ -142,14 +143,12 @@
                                     <h6>Brand:</h6>
                                 </li>
                                 <li class="list-inline-item">
-                                    <p class="text-muted"><strong>Canon</strong></p>
+                                    <p class="text-muted"><strong>{{brand}}</strong></p>
                                 </li>
                             </ul>
 
                             <h6>Description:</h6>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temp incididunt
-                                ut labore et dolore magna aliqua. Quis ipsum suspendisse. Donec condimentum elementum
-                                convallis. Nunc sed orci a diam ultrices aliquet interdum quis nulla.</p>
+                            <p>{{describe}}</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <h6>Avaliable Color :</h6>
@@ -205,6 +204,7 @@
                         </div>
                     </div>
                 </div>
+                {{/prods}}
             </div>
         </div>
     </section>
