--- a/views/Partial/footer.hbs
+++ b/views/Partial/footer.hbs
@@ -51,7 +51,7 @@
               </a>
             </li>
             <li>
-              <a href="./product">
+              <a href="./product/1">
                 Products
               </a>
             </li>
