--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -63,7 +63,7 @@
               <a class="nav-link" href="/about"> About</a>
             </li>
             <li class="nav-item dropdown dropbtn">
-                  <a class="nav-link" href="/product">Products</a>
+                  <a class="nav-link" href="/product/1">Products</a>
                   <div class="dropdown-content">
                     <a href="./product">Phone</a>
                     <a href="./product">Laptop</a>
