--- a/views/User/home.hbs
+++ b/views/User/home.hbs
@@ -433,7 +433,7 @@
         </div>
       </div>
       <div class="btn_box">
-        <a href="./product" class="view_more-link">
+        <a href="./product/1" class="view_more-link">
           View More
         </a>
       </div>
