--- a/views/User/product.hbs
+++ b/views/User/product.hbs
@@ -36,12 +36,12 @@
           <div class="box">
             <div class="img-box">
               <img src={{prod_img}} alt="" name={{prod_img}}>
-              <a href="/detail" class="add_cart_btn">
+              <a href="detail/{{id}}" class="add_cart_btn">
                 <span>
                   Add To Cart
                 </span>
               </a>
-              <a href="product/detail/{{id}}" class="detail_btn">
+              <a href="detail/{{id}}" class="detail_btn">
                 <span>
                   Detail
                 </span>
@@ -65,17 +65,19 @@
         {{/prods}}
       </div>
       <nav aria-label="Page navigation example">
+        
         <ul class="pagination justify-content-center">
-          <li class="page-item disabled">
-            <a class="page-link" href="#" tabindex="-1">Previous</a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
           <li class="page-item">
-            <a class="page-link" href="?page=1">Next</a>
+            <a class="page-link" href="{{prevPage}}"" tabindex="-1">Previous</a>
+          </li>
+          {{#pages}}
+             <li class="page-item"><a class="page-link" href="./{{.}}">{{.}}</a></li>
+          {{/pages}}
+          <li>
+            <a class="page-link" href="{{nextPage}}"">Next</a>
           </li>
         </ul>
+       
       </nav>
     </div>
   </section>
