create register page + user DTO

--- a/views/User/login.hbs
+++ b/views/User/login.hbs
@@ -61,7 +61,11 @@
                   <button class="mt-5 btn btn-primary btn-block text-uppercase">
                     Forgot your password?
                   </button>
+                  
                 </form>
+                <button type="button" onclick="window.location.href='/register'" class="mt-5 btn btn-primary btn-block text-uppercase">
+                    Create an account
+                  </button>
               </div>
             </div>
           </div>
