--- a/views/User/register.hbs
+++ b/views/User/register.hbs
@@ -27,68 +27,68 @@
             </div>
             <div class="row mt-2">
               <div class="col-12">
-                <form action="/admin" method="post" class="tm-login-form">
+                <form action="/register" method="post" class="tm-login-form">
                   <div class="form-group">
-                    <label for="fullname">Full Name</label>
+                    <label for="user_fullname">Full Name</label>
                     <input
-                      name="fullname"
+                      name="user_fullname"
                       type="text"
                       class="form-control validate"
-                      id="fullname"
+                      id="user_fullname"
                       value=""
                       required
                     />
                   </div>
                   <div class="form-group">
-                    <label for="email">Email</label>
+                    <label for="user_email">Email</label>
                     <input
-                      name="email"
+                      name="user_email"
                       type="email"
                       class="form-control validate"
-                      id="email"
+                      id="user_email"
                       value=""
                       required
                     />
                   </div>
                   <div class="form-group">
-                    <label for="address">Address</label>
+                    <label for="user_address">Address</label>
                     <input
-                      name="address"
+                      name="user_address"
                       type="text"
                       class="form-control validate"
-                      id="address"
+                      id="usre_address"
                       value=""
                     />
                   </div>
                   <div class="form-group">
-                    <label for="username">Username</label>
+                    <label for="user_username">Username</label>
                     <input
-                      name="username"
+                      name="user_username"
                       type="text"
                       class="form-control validate"
-                      id="username"
+                      id="user_username"
                       value=""
                       required
                     />
                   </div>
                   <div class="form-group mt-3">
-                    <label for="password">Password</label>
+                    <label for="user_password">Password</label>
                     <input
-                      name="password"
+                      name="user_password"
                       type="password"
                       class="form-control validate"
-                      id="password"
+                      id="user_password"
                       value=""
                       required
                     />
                   </div>
                   <div class="form-group mt-3">
-                    <label for="re-password">Confirm Password</label>
+                    <label for="re_password">Confirm Password</label>
                     <input
-                      name="re-password"
+                      name="re_password"
                       type="password"
                       class="form-control validate"
-                      id="re-password"
+                      id="re_password"
                       value=""
                       required
                     />
