--- a/views/User/login.hbs
+++ b/views/User/login.hbs
@@ -27,7 +27,7 @@
             </div>
             <div class="row mt-2">
               <div class="col-12">
-                <form action="/admin" method="post" class="tm-login-form">
+                <form action="" method="post" class="tm-login-form">
                   <div class="form-group">
                     <label for="username">Username</label>
                     <input
