--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -24,13 +24,23 @@
             <i class="fa fa-search" aria-hidden="true"></i>
           </button>
         </from>
+        
         <div class="user_option_box">
+          {{#if user}}
+          <a href="/logout" class="account-link">
+            <i class="fa fa-user" aria-hidden="true"></i>
+            <span>
+              Logout
+            </span>
+          </form>
+          {{else}}
           <a href="/login" class="account-link">
             <i class="fa fa-user" aria-hidden="true"></i>
             <span>
               Login
             </span>
-          </a>
+          </form>
+          {{/if}}
           <a href="cart" class="nav-link">
             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
             <span>
