Commit google login

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1013,3 +1013,10 @@ a:focus {
     font-size: 14px;
     color: #ffc000;
   }
+  .social-btn{
+    font-weight: 100;
+    color:white;
+    width:190px;
+    font-size: 0.9rem;
+}
+  
