--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -45,7 +45,7 @@
   <div class="header_bottom">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg custom_nav-container ">
-        <a class="navbar-brand hub" href="./">
+        <a class="navbar-brand hub" href="/home">
           <span>Tech</span>
           <span>Hub</span>
         </a>
