--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -1,4 +1,3 @@
-
 <!-- header section strats -->
 <header class="header_section">
   <div class="header_top">
@@ -27,9 +26,11 @@
         <div class="user_option_box">
           <a href="/login" class="account-link">
             <i class="fa fa-user" aria-hidden="true"></i>
-            <span>
-              Login
-            </span>
+            {{#if user}}
+            <span>Hello {{user.lastName}} {{user.firstName}}!</span><a href="/logout">Logout</a>
+            {{else}}
+            <a href="/login"><i class="fa fa-user"></i> Login</a>
+            {{/if}}
           </a>
           <a href="cart" class="nav-link">
             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
@@ -50,7 +51,8 @@
           <span>Hub</span>
         </a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class=""></span>
         </button>
 
@@ -63,14 +65,14 @@
               <a class="nav-link" href="/about"> About</a>
             </li>
             <li class="nav-item dropdown dropbtn">
-                  <a class="nav-link" href="/product/1">Products</a>
-                  <div class="dropdown-content">
-                    <a href="./product">Phone</a>
-                    <a href="./product">Laptop</a>
-                    <a href="./product">Tablet</a>
-                    <a href="./product">Accessories</a>
-                  </div>
-                </li>
+              <a class="nav-link" href="/product/1">Products</a>
+              <div class="dropdown-content">
+                <a href="./product">Phone</a>
+                <a href="./product">Laptop</a>
+                <a href="./product">Tablet</a>
+                <a href="./product">Accessories</a>
+              </div>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="/why">Why Us</a>
             </li>
