--- a/views/User/login.hbs
+++ b/views/User/login.hbs
@@ -26,7 +26,6 @@
             <div class="col-12 text-center">
               <h2 class="tm-block-title mb-4">Welcome to Dashboard, Login</h2>
             </div>
-<<<<<<< Updated upstream
             <div class="row mt-2">
               <div class="col-12">
                 <form action="/admin" method="post" class="tm-login-form">
@@ -60,44 +59,15 @@
                       Login
                     </button>
                   </div>
+                  <button type="button" onclick="window.location.href='/register'" class="mt-5 btn btn-primary btn-block text-uppercase">
+                    Create an account
+                  </button>
                   <button class="mt-5 btn btn-primary btn-block text-uppercase">
                     Forgot your password?
                   </button>
                 </form>
-=======
-          </div>
-          <div class="row mt-2">
-            <div class="col-12">
-              <form action="" method="post" class="tm-login-form">
-                <div class="form-group">
-                  <label for="username">Username</label>
-                  <input name="username" type="text" class="form-control validate" id="username" value="" required />
-                </div>
-                <div class="form-group mt-3">
-                  <label for="password">Password</label>
-                  <input name="password" type="password" class="form-control validate" id="password" value=""
-                    required />
-                </div>
-                <div class="form-group mt-4">
-                  <button type="submit" class="btn btn-primary btn-block text-uppercase">
-                    Login
-                  </button>
-                </div>
-                <button class="mt-5 btn btn-primary btn-block text-uppercase">
-                  Forgot your password?
-                </button>
-
-              </form>
-              <button type="button" onclick="window.location.href='/register'"
-                class="mt-5 btn btn-primary btn-block text-uppercase">
-                Create an account
-              </button>
-              <div class="col-12 text-center">
-                <h2 class="tm-block-title mb-4">Or</h2>
->>>>>>> Stashed changes
               </div>
-              <button type="button" onclick="window.location.href='/register'"
-                class="mt-5 btn btn-primary btn-block text-uppercase">
+              <button type="button" onclick="window.location.href='/google'" class="mt-5 btn btn-primary btn-block text-uppercase">
                 <i class="fab fa-google-plus-g"></i> Sign in with Google+
               </button>
 
