--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -29,7 +29,7 @@
             {{#if user}}
             <span>Hello {{user.lastName}} {{user.firstName}}!</span><a href="/logout">Logout</a>
             {{else}}
-            <a href="/login"><i class="fa fa-user"></i> Login</a>
+            <a href="/login">Login</a>
             {{/if}}
           </a>
           <a href="cart" class="nav-link">
