--- a/views/Admin/add-product.hbs
+++ b/views/Admin/add-product.hbs
@@ -59,12 +59,12 @@
                   <div class="form-group mb-3 col-xs-12 col-sm-6">
                     <label for="stock">Quantity
                     </label>
-                    <input id="stock" name="in_stock" type="number" class="form-control validate" required />
+                    <input id="stock" name="in_stock" type="number" min="0" step="1" value="0" class="form-control validate" required />
                   </div>
                   <div class="form-group mb-3 col-xs-12 col-sm-6">
                     <label for="price">Price
                     </label>
-                    <input id="price" name="price" type="number" class="form-control validate" required />
+                    <input id="price" name="price" type="number" min="0" step="0.5" value='0' class="form-control validate" required />
                   </div>
                   <div class="form-group mb-3 col-xs-12 col-sm-6">
                     <label for="units">Units
