--- a/views/Partial/headerAdmin.hbs
+++ b/views/Partial/headerAdmin.hbs
@@ -91,7 +91,7 @@
     </ul>
     <ul class="navbar-nav">
         <li class="nav-item">
-        <a class="nav-link d-block" href="/Admin/login">
+        <a class="nav-link d-block" href="/Admin/">
             Admin, <b>Logout</b>
         </a>
         </li>
