--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -27,7 +27,7 @@
           <a href="/login" class="account-link">
             <i class="fa fa-user" aria-hidden="true"></i>
             {{#if user}}
-            <span>Hello {{user.lastName}} {{user.firstName}}!</span><a href="/logout">Logout</a>
+            <a href="/profile"><span>Hello {{user.lastName}} {{user.firstName}}!</span></a><a href="/logout">Logout</a>
             {{else}}
             <a href="/login">Login</a>
             {{/if}}
