--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -23,11 +23,12 @@
             <i class="fa fa-search" aria-hidden="true"></i>
           </button>
         </from>
+        
         <div class="user_option_box">
           <a href="/login" class="account-link">
             <i class="fa fa-user" aria-hidden="true"></i>
             {{#if user}}
-            <a href="/profile"><span>Hello {{user.lastName}} {{user.firstName}}!</span></a><a href="/logout">Logout</a>
+            <span>Hello {{user.lastName}} {{user.firstName}}!</span><a href="/logout">Logout</a>
             {{else}}
             <a href="/login">Login</a>
             {{/if}}
