--- a/views/User/login.hbs
+++ b/views/User/login.hbs
@@ -28,7 +28,7 @@
             </div>
             <div class="row mt-2">
               <div class="col-12">
-                <form action="/admin" method="post" class="tm-login-form">
+                <form action="" method="post" class="tm-login-form">
                   <div class="form-group">
                     <label for="username">Username</label>
                     <input
@@ -65,7 +65,11 @@
                   <button class="mt-5 btn btn-primary btn-block text-uppercase">
                     Forgot your password?
                   </button>
+                  
                 </form>
+                <button type="button" onclick="window.location.href='/register'" class="mt-5 btn btn-primary btn-block text-uppercase">
+                    Create an account
+                  </button>
               </div>
               <button type="button" onclick="window.location.href='/google'" class="mt-5 btn btn-primary btn-block text-uppercase">
                 <i class="fab fa-google-plus-g"></i> Sign in with Google+
