--- a/views/User/register.hbs
+++ b/views/User/register.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Login Page</title>
+    <title>Create an account</title>
     {{> link}}
     <link rel="stylesheet" href="/css/templatemo-style.css">
 
@@ -22,30 +22,73 @@
           <div class="tm-bg-primary-dark tm-block tm-block-h-auto">
             <div class="row">
               <div class="col-12 text-center">
-                <h2 class="tm-block-title mb-4">Welcome to Dashboard, Login</h2>
+                <h2 class="tm-block-title mb-4">Create an account</h2>
               </div>
             </div>
             <div class="row mt-2">
               <div class="col-12">
-                <form action="/admin" method="post" class="tm-login-form">
+                <form action="/register" method="post" class="tm-login-form">
                   <div class="form-group">
-                    <label for="username">Username</label>
+                    <label for="user_fullname">Full Name</label>
                     <input
-                      name="username"
+                      name="user_fullname"
                       type="text"
                       class="form-control validate"
-                      id="username"
+                      id="user_fullname"
+                      value=""
+                      required
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="user_email">Email</label>
+                    <input
+                      name="user_email"
+                      type="email"
+                      class="form-control validate"
+                      id="user_email"
+                      value=""
+                      required
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="user_address">Address</label>
+                    <input
+                      name="user_address"
+                      type="text"
+                      class="form-control validate"
+                      id="usre_address"
+                      value=""
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="user_username">Username</label>
+                    <input
+                      name="user_username"
+                      type="text"
+                      class="form-control validate"
+                      id="user_username"
                       value=""
                       required
                     />
                   </div>
                   <div class="form-group mt-3">
-                    <label for="password">Password</label>
+                    <label for="user_password">Password</label>
                     <input
-                      name="password"
+                      name="user_password"
                       type="password"
                       class="form-control validate"
-                      id="password"
+                      id="user_password"
+                      value=""
+                      required
+                    />
+                  </div>
+                  <div class="form-group mt-3">
+                    <label for="re_password">Confirm Password</label>
+                    <input
+                      name="re_password"
+                      type="password"
+                      class="form-control validate"
+                      id="re_password"
                       value=""
                       required
                     />
@@ -55,12 +98,9 @@
                       type="submit"
                       class="btn btn-primary btn-block text-uppercase"
                     >
-                      Login
+                      Sign Up
                     </button>
                   </div>
-                  <button class="mt-5 btn btn-primary btn-block text-uppercase">
-                    Forgot your password?
-                  </button>
                 </form>
               </div>
             </div>
