check on input product creating and editing

--- a/views/Admin/edit-product.hbs
+++ b/views/Admin/edit-product.hbs
@@ -123,6 +123,15 @@
           $(this).removeClass('is-invalid');
         }
       });
+    
+    $('#price, #quantity').on('input', function(){
+        if(this.value == "" || isNaN(this.value)){
+          $(this).addClass('is-invalid');
+        }
+        else{
+          $(this).removeClass('is-invalid');
+        }
+      });
   </script>
 </body>
 
