--- a/views/Admin/manage-users.hbs
+++ b/views/Admin/manage-users.hbs
@@ -13,9 +13,9 @@
                                 <tr>
                                     <th scope="col">&nbsp;</th>
                                     <th scope="col">USERNAME</th>
-                                    <th scope="col">REGISTER DATE</th>
-                                    <th scope="col">TOTAL PURCHASES</th>
-                                    <th scope="col">STATUS</th>
+                                    <th scope="col">FULL NAME</th>
+                                    <th scope="col">ADDRESS</th>
+                                    <th scope="col">EMAIL</th>
                                     <th scope="col">&nbsp;</th>
                                 </tr>
                             </thead>
