--- a/views/Admin/add-product.hbs
+++ b/views/Admin/add-product.hbs
@@ -42,8 +42,9 @@
                 </div>
                 <div class="form-group mb-3">
                   <label for="category">Category</label>
+                  <div id="alert" class="alert alert-danger">category is not selected</div>
                   <select class="custom-select tm-select-accounts" id="category" name='category'>
-                    <option selected>Select category</option>
+                    <option selected value='selected'>Select category</option>
                     {{#types}}
                     <option value={{type_name}}>{{type_name}}</option>
                     {{/types}}
@@ -106,7 +107,30 @@
     integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
+    $('#name').on('input', function(){
+        if(this.value == ""){
+          $(this).addClass('is-invalid');
+        }
+        else{
+          $(this).removeClass('is-invalid');
+        }
+      });
+    
+    $('#price, #quantity').on('input', function(){
+        if(this.value == "" || isNaN(this.value)){
+          $(this).addClass('is-invalid');
+        }
+        else{
+          $(this).removeClass('is-invalid');
+        }
+      });
 
+    $('#category').on('change',function(){
+      var errorDiv = document.getElementById("alert");
+      if($('#category').val() == 'selected'){
+          errorDiv.style.display = "block";
+      }else{errorDiv.style.display = "none";}
+    });
   </script>
 </body>
 
