--- a/views/Admin/user-detail.hbs
+++ b/views/Admin/user-detail.hbs
@@ -30,12 +30,12 @@
                             </div>
                             <hr class="separator">
                             <div class="row px-3">
-                                <div class="col title">Email</div>
-                                <div class="col text-dark">{{user_email}}</div> <!--TODO{{email}}-->
+                                <div class="col title">Address</div>
+                                <div class="col text-dark">{{user_address}}</div> <!--TODO{{email}}-->
                             </div>
                             <hr class="separator">
                             <div class="row px-3">
-                                <div class="col title">Tel</div>
+                                <div class="col title">Email</div>
                                 <div class="col text-dark">{{user_email}}</div> <!--TODO{{tel}}-->
                             </div>
                         </div>
